--- a/ops/env.example
+++ b/ops/env.example
@@ -2,8 +2,39 @@
 # Copy this file to .env and fill in your actual values
 
 # RPC URLs
-BASE_RPC=https://base-mainnet.g.alchemy.com/v2/YOUR_KEY
-ARB_RPC=https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY
+BASE_RPC=https://base-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+ARB_RPC=https://arb-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+
+# Alternative RPC providers:
+# Ankr (requires API key; embed the key in the URL or use a provider that supports headers)
+# BASE_RPC=https://rpc.ankr.com/base/YOUR_ANKR_KEY
+# ARB_RPC=https://rpc.ankr.com/arbitrum/YOUR_ANKR_KEY
+# Public (rate-limited, not recommended for production): https://mainnet.base.org
+
+# Optional: Subgraph endpoints (leave empty to disable discovery)
+# Public Uniswap/Curve subgraphs often require API keys or have moved; set working endpoints here
+BASE_UNIV3_SUBGRAPH=
+ARB_UNIV3_SUBGRAPH=
+BASE_CURVE_SUBGRAPH=
+ARB_CURVE_SUBGRAPH=
+
+# Graph gateway authentication (required for The Graph gateway & many providers)
+# GRAPH_AUTH_MODE:
+#   bearer -> send header Authorization: Bearer <key>
+#   apikey -> send header apikey: <key>
+# If using The Graph Gateway endpoints like:
+#   https://gateway.thegraph.com/api/subgraphs/id/<SUBGRAPH_ID>
+# you MUST also set GRAPH_API_KEY (or rewrite URL to include key:
+#   https://gateway.thegraph.com/api/<KEY>/subgraphs/id/<SUBGRAPH_ID>)
+GRAPH_AUTH_MODE=bearer
+GRAPH_API_KEY=
+
+# Example The Graph Gateway UniV3 (Base) subgraph (replace <SUBGRAPH_ID>):
+# BASE_UNIV3_SUBGRAPH=https://gateway.thegraph.com/api/subgraphs/id/<SUBGRAPH_ID>
+# After setting GRAPH_API_KEY, the bot will inject Authorization automatically.
+
+# Example Goldsky style endpoint (already key in URL):
+# ARB_UNIV3_SUBGRAPH=https://api.goldsky.com/api/public/project_<pid>/subgraphs/uniswap-v3-arbitrum/main/gn
 
 # Private transaction RPCs (optional)
 BASE_PRIVATE_TX_RPC=
