--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16
@@ -20,7 +18,9 @@ services:
       retries: 5
 
   bot:
-    build: ../
+    build:
+      context: ..
+      dockerfile: ops/Dockerfile
     env_file: .env
     depends_on:
       db:
@@ -40,7 +40,8 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      # Mount the single prometheus.yml file directly; ensure the host path is a file, not a directory
+      - ./prometheus.yml/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
